tests/tokenizer/invalid_character_literal.err.out
tests/tokenizer/invalid_character_literal.err.ri:1:1: error: empty character literal
      | 
    1 | ''
      | ^ 
tests/tokenizer/invalid_character_literal.err.ri:2:5: error: character literal may only contain one codepoint
      | 
    2 | 'abc'
      |     ^
      = help: if you meant to write a string literal, use double quotes
error: could not compile source code, aborting due to 2 previous errors